[package]
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>", "Fedor Logachev <not.fl3@gmail.com>", "Constantine Shablya <t3a@protonmail.com>"]
description = "glium_text fork, text drawing with glium and rusttype"
documentation = "https://docs.rs/glium_text_rusttype"
keywords = ["text", "opengl"]
license = "MIT"
name = "glium_text_rusttype"
repository = "https://github.com/not-fl3/glium_text_rusttype"
version = "0.3.6"

[dependencies]
rusttype = "0.8"

[dependencies.glium]
default-features = false
version = ">=0.29.1, <0.32.0"

[dev-dependencies]
cgmath = "0.18"

[dev-dependencies.glium]
features = ["glutin"]
version = "0.29.1"
